--- a/css/app.css
+++ b/css/app.css
@@ -64,7 +64,10 @@ h1 {
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
-
+.timer {
+    display:inline-block; 
+    margin-left: 40px; 
+}
 .deck .card.open {
     transform: rotateY(0);
     background: #02b3e4;
@@ -107,3 +110,12 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+.alert {
+    padding: 20px;
+    margin: 25px;
+    background-color: #02ccba;
+    color: white;
+    visibility: hidden;
+  }
+  
